Chercher un produit (html)

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
       <input type="button" id="ajouter" value="Ajouter !">
     </form>
 
-
+    <h2>Rechercher un produit</h2>
+    <p>
+      <input type="text" id="recherche" placeholder="Lait">
+      <input type="button" id="rechercher" value="Chercher...">
+    </p>
   	<script src="frigo.js"></script>
   </body>
 </html>
