Révision nommage HTML Recherche JS ok

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
 
     <h2>Rechercher un produit</h2>
     <p>
-      <input type="text" id="recherche" placeholder="Lait">
+      <input type="text" id="produitRecherche" placeholder="Lait">
       <input type="button" id="rechercher" value="Chercher...">
     </p>
+    <p>
+      <ul id="produitExistant">
+      </ul>
+    </p>
+
   	<script src="frigo.js"></script>
   </body>
 </html>
