--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <h2>Ajouter un nouveau produit</h2>
     <form action="index.html" method="POST">
       <input type="text" id="produitAjout" placeholder="Mousse au chocolat">
-      <input type="number" id="quantiteAjout" min="1" max="15" step="1" value="1" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
-      <!-- pour rester en bonne santé pendant ce confinement, on peut considérer qu'il n'y aura pas plus de 15 produits identiques-->
+      <input type="number" id="quantiteAjout" min="1" step="1" value="1" onkeypress="return event.charCode >= 48 && event.charCode <= 57">
       <input type="button" id="ajouter" value="Ajouter !">
     </form>
+    <p id="produitAjoutValide"></p>
 
     <h2>Rechercher un produit</h2>
     <p>
