Ajouter 1 à un produit existant HMTL

--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
       </ul>
     </p>
 
+    <!-- Ajouter 1 à un produit -->
+    <h2>Faire ses courses habituelles</h2>
+    <p>
+      <select id="produitHabAjout" name="produitsHabituels">
+      </select>
+      <input type="button" id="ajoutUnProduit" value="Se faire livrer dans le frigo...">
+    </p>
+
   	<script src="frigo.js"></script>
   </body>
 </html>
