--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       </select>
       <input type="button" id="ajoutUnProduit" value="Se faire livrer dans le frigo...">
     </p>
+    <p id="produitHabAjoutValide"></p>
 
   	<script src="frigo.js"></script>
   </body>
