ajout 1 à un produit existant ok

--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
     </p>
     <p id="produitHabAjoutValide"></p>
 
+    <!-- Supprimer un produit -->
+    <h2>Accès de boulimie</h2>
+    <p>
+      <select id="produitHabSupp" name="produitsHabituels">
+      </select>
+      <input type="button" id="suppUnProduit" value="Dévaliser un produit du frigo...">
+    </p>
+    <p id="produitHabSuppValide"></p>
+
   	<script src="frigo.js"></script>
   </body>
 </html>
