supp 1 à un produit (+code opti) + début supp total

--- a/index.html
+++ b/index.html
@@ -44,14 +44,23 @@
     </p>
     <p id="produitHabAjoutValide"></p>
 
-    <!-- Supprimer un produit -->
-    <h2>Accès de boulimie</h2>
+    <!-- Supprimer 1 à un produit -->
+    <h2>Petite faim</h2>
     <p>
       <select id="produitHabSupp" name="produitsHabituels">
       </select>
-      <input type="button" id="suppUnProduit" value="Dévaliser un produit du frigo...">
+      <input type="button" id="suppUnProduit" value="Manger un produit du frigo...">
     </p>
     <p id="produitHabSuppValide"></p>
+
+    <!-- Supprimer totalement un produit -->
+    <h2>Grande faim</h2>
+    <p>
+      <select id="produitHabSuppTotal" name="produitsHabituels">
+      </select>
+      <input type="button" id="suppUnProduitTotal" value="Dévaliser un produit du frigo...">
+    </p>
+    <p id="produitHabSuppTotalValide"></p>
 
   	<script src="frigo.js"></script>
   </body>
