toutes fonctionnalités ok

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
   <body>
     <h1 id="titre">Mon frigo</h1>
 
-    <h2>Contenu du frigo</h2>
-    <p>
-      <input type="button" name="contenu" id="contenu" value="Afficher">
-    </p>
-    <p>
-      <ul id="contenuFrigo">
-      </ul>
-    </p>
+    <div class="contenuDuFrigo">
+      <h2>Contenu du frigo</h2>
+      <p>
+        <input type="button" name="contenu" id="contenu" value="Afficher">
+      </p>
+      <p>
+        <ul id="contenuFrigo">
+        </ul>
+      </p>
+    </div>
 
     <h2>Ajouter un nouveau produit</h2>
     <form action="index.html" method="POST">
