--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <link href="style.css" rel="stylesheet"/>
   </head>
   <body>
-    <img src="images/iFrigo.png" alt="iFrigo" class="iFrigoimg">
-    <h1 id="titre">iFrigo</h1>
 
+    <div class="header">
+      <h1 id="titre">iFrigo</h1>
+    </div>
 
     <div class="contenuDuFrigo">
       <h2>Contenu du frigo</h2>
