add tableau avec quantité

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
       <p>
         <input type="button" class="button contenuFO" name="contenu" id="contenu" value="Ouvrir   ">&nbsp&nbsp&nbsp<input type="button" class="button contenuFF" id="contenuF" value="Fermer   ">
       </p>
-        <ul id="contenuFrigo">
-        </ul>
+        <table id="contenuFrigo"></table>
     </div>
 
     <div class="ajouterNouveauProduit">
