--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 
-    <div class="header">
+    <div class="header" title="Bonjour !">
       <h1 id="titre">iFrigo</h1>
     </div>
 
@@ -30,7 +30,7 @@
     </div>
 
     <div class="choix rechercherProduits">
-      <h2>Qu'est ce qu'il y a dans mon frigo ?</h2>
+      <h2>Qu'est-ce qu'il y a dans mon frigo ?</h2>
       <form id="rechercher">
         <input type="text" id="produitRecherche" placeholder="Lait" required>
         <input type="submit" class="button contenuRecherche" value="Chercher&emsp;">
