div un peu plus jolies

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
       <h1 id="titre">iFrigo</h1>
     </div>
 
-    <div class="contenuDuFrigo">
+    <div class="choix contenuDuFrigo">
       <h2>Dans mon frigo il y a...</h2>
-      <p>
+      <p class="boutonContenu">
         <input type="button" class="button contenuFO" name="contenu" id="contenu" value="Ouvrir&emsp;">&emsp;<input type="button" class="button contenuFF" id="contenuF" value="Fermer&emsp;">
       </p>
       <p id="contenuFrigo"></p>
