--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>Frigo</title>
     <link href="style.css" rel="stylesheet"/>
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   </head>
   <body>
 
@@ -12,7 +14,7 @@
     </div>
 
     <div class="choix contenuDuFrigo">
-      <h2>Dans mon frigo il y a...</h2>
+      <h2>&emsp;Dans mon frigo il y a...</h2>
       <p class="boutonContenu">
         <input type="button" class="button contenuFO" name="contenu" id="contenu" value="Ouvrir&emsp;">&emsp;<input type="button" class="button contenuFF" id="contenuF" value="Fermer&emsp;">
       </p>
