--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p id="contenuFrigo"></p>
     </div>
 
-    <div class="choix">
+    <div class="choix faireCourses">
       <h2>Faire de nouvelles courses</h2>
       <form id="ajouter" >
         <input type="text" id="produitAjout" placeholder="Mousse au chocolat" required>
@@ -29,6 +29,10 @@
         <input type="submit" class="button contenuAjouterProduit" value="Acheter&emsp;">
       </form>
       <p id="produitAjoutValide"></p>
+    </div>
+
+    <div class="anim">
+        <img src="images/icone-couple.png" alt="couple" title="Couple"  id="animationCourse" class="animCouple">
     </div>
 
     <div class="choix rechercherProduits">
