--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="choix contenuDuFrigo">
-      <h2>&emsp;Dans mon frigo il y a...</h2>
+      <h2>Dans mon frigo il y a...</h2>
       <p class="boutonContenu">
         <input type="button" class="button contenuFO" name="contenu" id="contenu" value="Ouvrir&emsp;">&emsp;<input type="button" class="button contenuFF" id="contenuF" value="Fermer&emsp;">
       </p>
