--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 id="titre">iFrigo</h1>
     </div>
 
-    <div class="choix contenuDuFrigo boutonContenu">
+    <div class="contenuDuFrigo boutonContenu">
       <h2>Dans mon frigo il y a...</h2>
       <p>
         <input type="button" class="button contenuFO" name="contenu" id="contenu" value="Ouvrir&emsp;">&emsp;<input type="button" class="button contenuFF" id="contenuF" value="Fermer&emsp;">
@@ -21,7 +21,7 @@
       <p id="contenuFrigo"></p>
     </div>
 
-    <div class="choix rechercherProduits">
+    <div class="rechercherProduits">
       <h2>Qu'est-ce qu'il y a dans mon frigo ?</h2>
       <form id="rechercher" class="boutonContenu">
         <input type="text" id="produitRecherche" placeholder="Lait" required>
@@ -53,7 +53,7 @@
         </div>
     </div>
 
-    <div class="anim">
+    <div class="animCourse">
         <img src="images/icone-couple.png" alt="couple" title="Couple"  id="animationCourse" class="animCouple">
     </div>
 
@@ -77,6 +77,10 @@
         </p>
         <p id="produitHabSuppTotalValide"></p>
         </div>
+    </div>
+
+    <div class="animManger">
+        <img src="images/icone-pomme2.png" alt="fruit" title="produit consommé" class="animMange" id="animationMange">
     </div>
 
     <footer>Technologies Web - ISIS - Victoria Vichet - FIE 3</footer>
