affichage liste recherche

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         <input type="text" id="produitRecherche" placeholder="Lait" required>
         <input type="submit" class="button contenuRecherche" value="Chercher&emsp;">
       </form>
-      <ul id="produitExistant">
-      </ul>
+      <p id="produitExistant">
+      </p>
     </div>
 
     <div class="achat choix">
