--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
 
     <div class="animManger">
-        <img src="images/icone-pomme2.png" alt="fruit" title="produit consommé" class="animMange" id="animationMange">
+        <img src="images/icone-pomme.png" alt="fruit" title="produit consommé" class="animMange" id="animationMange">
     </div>
 
     <footer>Technologies Web - ISIS - Victoria Vichet - FIE 3</footer>
